Vistas basadas en clases "CreateView"

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,8 @@
     <script src="{% static 'lib/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <!-- AdminLTE App -->
     <script src="{% static 'lib/adminlte/js/adminlte.min.js' %}"></script>
+    <!-- Sweetalert2 App -->
+    <script src="{% static 'lib/adminlte/plugins/sweetalert2/sweetalert2.all.min.js' %}"></script>
     <!-- Block head -->
     {% block head %}
 
