--- a/core/erp/templates/category/list.html
+++ b/core/erp/templates/category/list.html
@@ -4,7 +4,8 @@
     <tr>
         <th scope="col" style="width: 10%">Nro</th>
         <th scope="col" style="width: 70%">Nombre</th>
-        <th scope="col" style="width: 20%">Opciones</th>
+        <th scope="col" style="width: 10%">Descripción</th>
+        <th scope="col" style="width: 10%">Opciones</th>
     </tr>
 {% endblock %}
 
@@ -13,6 +14,7 @@
         <tr>
             <td>{{ c.id }}</td>
             <td>{{ c.name }}</td>
+            <td>{{ c.desc }}</td>
             <td>
                 <button type="button" class="btn btn-warning btn-xs btn-flat"><i class="fas fa-edit"></i></button>
                 <button type="button" class="btn btn-danger btn-xs btn-flat"><i class="fas fa-trash-alt"></i></button>
