--- a/templates/list.html
+++ b/templates/list.html
@@ -33,9 +33,9 @@
             </table>
         </div>
         <div class="card-footer">
-            <button class="btn btn-primary btn-flat">
+            <a href="{{ create_url }}" class="btn btn-primary btn-flat">
                 <i class="fas fa-plus"></i> Nuevo registro
-            </button>
+            </a>
         </div>
     </div>
 {% endblock %}
@@ -50,6 +50,24 @@
                     url: '{% static 'lib/datatables/datatables-1.13.5/spanish.txt' %}'
                 }
             });
+
+            $('.btnTest').on('click', function () {
+                for (let i = 1; i < 8; i++) {
+                    $.ajax({
+                        url: '{% url 'erp:category_list' %}',
+                        type: 'POST',
+                        data: {'id': i},
+                        dataType: 'json'
+                    }).done(function (data) {
+                        console.log(data)
+                    }).fail(function () {
+                        alert("error");
+                    }).always(function () {
+                        console.log("...checked")
+                    })
+                }alert("complete");
+
+            })
         });
     </script>
 {% endblock %}
