--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,9 @@
     <script src="{% static 'lib/adminlte/js/adminlte.min.js' %}"></script>
     <!-- Sweetalert2 App -->
     <script src="{% static 'lib/adminlte/plugins/sweetalert2/sweetalert2.all.min.js' %}"></script>
+     <!-- Functions App -->
+    <script src="{% static 'js/functions.js' %}"></script>
+
     <!-- Block head -->
     {% block head %}
 
