'UpdateView' editing data; 'Delete View' in progress

--- a/core/erp/templates/category/list.html
+++ b/core/erp/templates/category/list.html
@@ -16,7 +16,7 @@
             <td>{{ c.name }}</td>
             <td>{{ c.desc }}</td>
             <td>
-                <button type="button" class="btn btn-warning btn-xs btn-flat"><i class="fas fa-edit"></i></button>
+                <a href="{% url 'erp:category_update' c.id %}" class="btn btn-warning btn-xs btn-flat"><i class="fas fa-edit"></i></a>
                 <button type="button" class="btn btn-danger btn-xs btn-flat"><i class="fas fa-trash-alt"></i></button>
             </td>
         </tr>
