--- a/core/erp/templates/category/list.html
+++ b/core/erp/templates/category/list.html
@@ -17,7 +17,7 @@
             <td>{{ c.desc }}</td>
             <td>
                 <a href="{% url 'erp:category_update' c.id %}" class="btn btn-warning btn-xs btn-flat"><i class="fas fa-edit"></i></a>
-                <button type="button" class="btn btn-danger btn-xs btn-flat"><i class="fas fa-trash-alt"></i></button>
+                <a href="{% url 'erp:category_delete' c.id %}" class="btn btn-danger btn-xs btn-flat"><i class="fas fa-trash-alt"></i></a>
             </td>
         </tr>
     {% endfor %}
