'DataTable' with ajax

--- a/templates/list.html
+++ b/templates/list.html
@@ -8,7 +8,13 @@
     <script src="{% static 'lib/datatables/datatables-1.13.5/js/dataTables.bootstrap5.min.js' %}"></script>
     <script src="{% static 'lib/datatables/responsive-2.5.0/js/dataTables.responsive.min.js' %}"></script>
     <script src="{% static 'lib/datatables/responsive-2.5.0/js/responsive.bootstrap5.min.js' %}"></script>
+
+    {% block head_list %}
+
+    {% endblock %}
 {% endblock %}
+
+
 
 {% block content %}
     <div class="card card-default">
@@ -65,7 +71,8 @@
                     }).always(function () {
                         console.log("...checked")
                     });
-                }alert("complete");
+                }
+                alert("complete");
 
             })
         });
