--- a/core/erp/templates/category/list.html
+++ b/core/erp/templates/category/list.html
@@ -1,24 +1,34 @@
 {% extends 'list.html' %}
+{% load static %}
+
+{% block head_list %}
+    <script src="{% static 'category/js/list.js' %}"></script>
+{% endblock %}
 
 {% block columns %}
     <tr>
         <th scope="col" style="width: 10%">Nro</th>
-        <th scope="col" style="width: 40%">Nombre</th>
-        <th scope="col" style="width: 40%">Descripción</th>
+        <th scope="col" style="width: 20%">Nombre</th>
+        <th scope="col" style="width: 50%">Descripción</th>
         <th scope="col" style="width: 10%">Opciones</th>
     </tr>
 {% endblock %}
 
 {% block rows %}
-    {% for c in object_list %}
-        <tr>
-            <td>{{ c.id }}</td>
-            <td>{{ c.name }}</td>
-            <td>{{ c.desc }}</td>
-            <td>
-                <a href="{% url 'erp:category_update' c.id %}" class="btn btn-warning btn-xs btn-flat"><i class="fas fa-edit"></i></a>
-                <a href="{% url 'erp:category_delete' c.id %}" class="btn btn-danger btn-xs btn-flat"><i class="fas fa-trash-alt"></i></a>
-            </td>
-        </tr>
-    {% endfor %}
+    {#    {% for c in object_list %}#}
+    {#        <tr>#}
+    {#            <td>{{ c.id }}</td>#}
+    {#            <td>{{ c.name }}</td>#}
+    {#            <td>{{ c.desc }}</td>#}
+    {#            <td>#}
+    {#                <a href="{% url 'erp:category_update' c.id %}" class="btn btn-warning btn-xs btn-flat"><i class="fas fa-edit"></i></a>#}
+    {#                <a href="{% url 'erp:category_delete' c.id %}" class="btn btn-danger btn-xs btn-flat"><i class="fas fa-trash-alt"></i></a>#}
+    {#            </td>#}
+    {#        </tr>#}
+    {#    {% endfor %}#}
+
+{% endblock %}
+
+{% block javascript %}
+
 {% endblock %}
