--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,9 +1,8 @@
-{% extends 'body.html' %}
+{% extends 'layout.html' %}
 {% load widget_tweaks %}
-
 {% block content %}
-    <form action="." method="post">
-        <div class="card card-default">
+    <form method="post" action=".">
+        <div class="card card-primary">
             <div class="card-header">
                 <h3 class="card-title">
                     <i class="fas fa-trash"></i>
@@ -13,7 +12,6 @@
             <div class="card-body">
                 {% csrf_token %}
                 <input type="hidden" name="action" value="{{ action }}">
-
                 {% if form.errors %}
                     <div class="alert alert-danger alert-dismissible">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -25,49 +23,44 @@
                                 {% endfor %}
                             {% endfor %}
                         </ul>
-
                     </div>
                 {% endif %}
-
                 <div class="alert alert-danger alert-dismissible">
-                    <h5><i class="icon fas fa-ban"></i>Notificación!</h5>
-                    ¿Estás seguro de eliminar el registro nro {{ object.id }}?
+                    <h5><i class="icon fas fa-ban"></i> Notificación!</h5>
+                    ¿Estas seguro de eliminar el registro nro {{ object.id }}?
                 </div>
             </div>
             <div class="card-footer">
                 <button type="submit" class="btn btn-primary btn-flat">
                     <i class="fas fa-save"></i> Si, aceptar
                 </button>
-
-                <a href="{{ list_url }}" class="btn btn-primary btn-flat">
+                <a href="{{ list_url }}" class="btn btn-info btn-flat">
                     <i class="fas fa-times"></i> Cancelar
                 </a>
             </div>
         </div>
     </form>
-
     <script>
-
         $('form').on('submit', function (e) {
             e.preventDefault();
             var parameters = $(this).serializeArray();
             $.ajax({
-                // language=DjangoUrlPath
-                url: window.location.pathname, {# '{% url 'erp:category_create' %}', #}
+                url: window.location.pathname,
                 type: 'POST',
-                data: {},
+                data: parameters,
                 dataType: 'json'
             }).done(function (data) {
-                if(!data.hasOwnProperty('error')){
+                console.log(data);
+                if (!data.hasOwnProperty('error')) {
                     location.href = '{{ list_url }}';
                     return false;
                 }
-                message_error(data.error)
+                message_error(data.error);
             }).fail(function (jqXHR, textStatus, errorThrown) {
                 alert(textStatus + ': ' + errorThrown);
-            }).always(function () {
+            }).always(function (data) {
+
             });
         });
-
     </script>
 {% endblock %}
