--- a/templates/home.html
+++ b/templates/home.html
@@ -18,17 +18,15 @@
     <script src="{% static 'lib/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <!-- AdminLTE App -->
     <script src="{% static 'lib/adminlte/js/adminlte.min.js' %}"></script>
-    <!-- Sweetalert2 App -->
+    <!-- Sweetalert2 -->
     <script src="{% static 'lib/adminlte/plugins/sweetalert2/sweetalert2.all.min.js' %}"></script>
-     <!-- Functions App -->
+    <!-- Functions -->
     <script src="{% static 'js/functions.js' %}"></script>
-
     <!-- Block head -->
     {% block head %}
 
     {% endblock %}
 </head>
-
 {% block body %}
 
 {% endblock %}
