'jquery-confirm' with ajax

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,9 @@
     <script src="{% static 'lib/adminlte/js/adminlte.min.js' %}"></script>
     <!-- Sweetalert2 -->
     <script src="{% static 'lib/adminlte/plugins/sweetalert2/sweetalert2.all.min.js' %}"></script>
+     <!-- Jquery Confirm -->
+    <link rel="stylesheet" href="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.css' %}">
+    <script src="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.js' %}"></script>
     <!-- Functions -->
     <script src="{% static 'js/functions.js' %}"></script>
     <!-- Block head -->
