--- a/templates/form.html
+++ b/templates/form.html
@@ -41,6 +41,9 @@
                 <button type="submit" class="btn btn-primary btn-flat">
                     <i class="fas fa-save"></i> Guardar registro
                 </button>
+                <button type="reset" class="btn btn-danger btn-flat">
+                    <i class="fas fa-remove"></i> Cancelar
+                </button>
             </div>
         </div>
     </form>
@@ -59,26 +62,15 @@
             });
         {% endif %}
 
-        /*$('form').on('submit', function (e) {
+        $('form').on('submit', function (e) {
             e.preventDefault();
             var parameters = $(this).serializeArray();
-            $.ajax({
-                url: window.location.pathname,
-                type: 'POST',
-                data: parameters,
-                dataType: 'json'
-            }).done(function (data) {
-                console.log(data);
-                if (!data.hasOwnProperty('error')) {
-                    location.href = '{{ list_url }}';
-                    return false;
-                }
-                message_error(data.error);
-            }).fail(function (jqXHR, textStatus, errorThrown) {
-                alert(textStatus + ': ' + errorThrown);
-            }).always(function (data) {
 
-            });
-        });*/
+            submit_with_ajax(window.location.pathname, parameters, function () {
+                location.href = '{{ list_url }}';
+            })
+        });
     </script>
+
+
 {% endblock %}
