--- a/templates/vtc/sidebar.html
+++ b/templates/vtc/sidebar.html
@@ -2,10 +2,10 @@
 <aside class="main-sidebar sidebar-light-primary elevation-4">
     <a href="#" class="brand-link">
         <img src="{% static 'img/logo.png' %}"
-             alt="AdminLTE Logo"
+             alt="HADES Logo"
              class="brand-image img-circle elevation-3"
              style="opacity: .8">
-        <span class="brand-text font-weight-light">AdminLTE 3</span>
+        <span class="brand-text font-weight-light">HADES</span>
     </a>
     <div class="sidebar">
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
@@ -13,7 +13,7 @@
                 <img src="{% static 'img/user.png' %}" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
+                <a href="#" class="d-block">{{ request.user.username }}</a>
             </div>
         </div>
         <nav class="mt-2">
