--- a/templates/form.html
+++ b/templates/form.html
@@ -64,8 +64,8 @@
 
         $('form').on('submit', function (e) {
             e.preventDefault();
-            var parameters = $(this).serializeArray();
-
+            {#var parameters = $(this).serializeArray();#}
+            var parameters = new FormData(this);
             submit_with_ajax(window.location.pathname, parameters, 'Confirmación', '¿Estás seguro de realizar la siguiente acción?', function () {
                 location.href = '{{ list_url }}';
             })
