--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,9 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <!-- jQuery -->
     <script src="{% static 'lib/adminlte/plugins/jquery/jquery.min.js' %}"></script>
-    <!-- Bootstrap 4 -->
+    <!-- Bootstrap 5 -->
+    <link href="{% static 'lib/bootstrap-5.1.3-dist/css/bootstrap.min.css' %}">
+    <script src="{% static 'lib/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'lib/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <!-- AdminLTE App -->
     <script src="{% static 'lib/adminlte/js/adminlte.min.js' %}"></script>
