--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <!-- jQuery -->
+    <script src="{% static 'lib/bootstrap-5.1.3-dist/js/jquery.slim.min.js' %}"></script>
     <script src="{% static 'lib/adminlte/plugins/jquery/jquery.min.js' %}"></script>
     <!-- Bootstrap 5 -->
     <link href="{% static 'lib/bootstrap-5.1.3-dist/css/bootstrap.min.css' %}">
