--- a/templates/delete.html
+++ b/templates/delete.html
@@ -43,7 +43,8 @@
     <script>
         $('form').on('submit', function (e) {
             e.preventDefault();
-            var parameters = $(this).serializeArray();
+            {#var parameters = $(this).serializeArray();#}
+            var parameters = new FormData(this);
             submit_with_ajax(window.location.pathname, parameters, 'Notificación', '¿Estás seguro de eliminar el siguiente registro?', function () {
                 location.href = '{{ list_url }}';
             })
