"Intermedia Stable Version"

--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,10 @@
 {% extends 'layout.html' %}
 {% load widget_tweaks %}
+{% block head %}
+    {% block head_form %}
+
+    {% endblock %}
+{% endblock %}
 {% block content %}
     <form method="post" action="." enctype="multipart/form-data">
         <div class="card card-primary">
@@ -64,13 +69,10 @@
 
         $('form').on('submit', function (e) {
             e.preventDefault();
-            {#var parameters = $(this).serializeArray();#}
             var parameters = new FormData(this);
             submit_with_ajax(window.location.pathname, parameters, 'Confirmación', '¿Estás seguro de realizar la siguiente acción?', function () {
                 location.href = '{{ list_url }}';
             })
         });
     </script>
-
-
 {% endblock %}
