--- a/core/erp/templates/client/list.html
+++ b/core/erp/templates/client/list.html
@@ -1,5 +1,4 @@
 {% extends 'list.html' %}
-{% load widget_tweaks %}
 {% load static %}
 
 {% block head_list %}
@@ -12,7 +11,7 @@
         <th scope="col" style="width: 20%">Nombres</th>
         <th scope="col" style="width: 20%">Apellidos</th>
         <th scope="col" style="width: 10%">Dni</th>
-        <th scope="col" style="width: 15%">Fecha de Nacimiento</th>
+        <th scope="col" style="width: 15%">Fecha de nacimiento</th>
         <th scope="col" style="width: 15%">Direccion</th>
         <th scope="col" style="width: 15%">Sexo</th>
         <th scope="col" style="width: 10%">Opciones</th>
@@ -23,48 +22,41 @@
 
 {% endblock %}
 
-{% block buttons_list %}
-    <a class="btn btn-primary btn-flat btnAdd">
-        <i class="fas fa-plus"></i> Nuevo registro
-    </a>
-    <a href="{{ list_url }}" class="btn btn-success btn-flat">
-        <i class="fas fa-sync"></i> Actualizar
-    </a>
-{% endblock %}
-
 {% block javascript %}
 
-    <!-- Modal -->
-    <div class="modal fade" id="myModalClient" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">
-                        <b><i class="fas fa-search"></i> <span></span></b>
-                    </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <form method="post" action="." enctype="multipart/form-data">
-                    <div class="modal-body">
-                        <div class="container-fluid">
-                            <input name="action" type="hidden" value="add">
-                            <input name="id" id="id" type="hidden" value="0">
-                            {% for field in form.visible_fields %}
-                                <div class="form-group">
-                                    <label for="email">{{ field.label }}:</label>
-                                    {{ field|add_class:'form-control'|attr:'autocomplete:off' }}
-                                </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Guardar</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+
+
+    <!-- USING MODALS -->
+{#    <div class="modal fade" id="myModalClient" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">#}
+{#        <div class="modal-dialog">#}
+{#            <div class="modal-content">#}
+{#                <div class="modal-header">#}
+{#                    <h5 class="modal-title">#}
+{#                        <b><i class="fas fa-search"></i> <span></span></b>#}
+{#                    </h5>#}
+{#                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>#}
+{#                </div>#}
+{#                <form method="post" action="." enctype="multipart/form-data">#}
+{#                    <div class="modal-body">#}
+{#                        <div class="container-fluid">#}
+{#                            <input name="action" type="hidden" value="add">#}
+{#                            <input name="id" id="id" type="hidden" value="0">#}
+{#                            {% for field in form.visible_fields %}#}
+{#                                <div class="form-group">#}
+{#                                    <label for="email">{{ field.label }}:</label>#}
+{#                                    {{ field|add_class:'form-control'|attr:'autocomplete:off' }}#}
+{#                                </div>#}
+{#                            {% endfor %}#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="modal-footer">#}
+{#                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>#}
+{#                        <button type="submit" class="btn btn-primary">Guardar</button>#}
+{#                    </div>#}
+{#                </form>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 
 
 {% endblock %}
