--- a/templates/hzt/header.html
+++ b/templates/hzt/header.html
@@ -15,15 +15,18 @@
         <div class="collapse navbar-collapse order-3" id="navbarCollapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link"><i class="fas fa-home"></i> Home</a>
+                    <a href="{% url 'erp:dashboard' %}" class="nav-link"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                        class="nav-link dropdown-toggle"><i class="fas fa-folder-open"></i> Mantenimientos</a>
                     <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
-                        <li><a href="{% url 'erp:category_list' %}" class="dropdown-item"><i class="fas fa-truck-loading"></i> Categorías</a></li>
-                        <li><a href="{% url 'erp:product_list' %}" class="dropdown-item"><i class="fas fa-boxes"></i> Productos</a></li>
-                        <li><a href="{% url 'erp:client' %}" class="dropdown-item"><i class="fas fa-users"></i> Clientes</a></li>
+                        <li><a href="{% url 'erp:category_list' %}" class="dropdown-item"><i
+                                class="fas fa-truck-loading"></i> Categorías</a></li>
+                        <li><a href="{% url 'erp:product_list' %}" class="dropdown-item"><i class="fas fa-boxes"></i>
+                            Productos</a></li>
+                        <li><a href="{% url 'erp:client_list' %}" class="dropdown-item"><i class="fas fa-users"></i> Clientes</a>
+                        </li>
                         <li><a href="#" class="dropdown-item"><i class="fas fa-shopping-cart"></i> Ventas</a></li>
                     </ul>
                 </li>
@@ -35,8 +38,8 @@
                     <i class="fas fa-users-cog"></i> {{ request.user.username }}
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <span class="dropdown-header">
-                        Último Acceso: 12 de Abril de 2020
+                    <span class="dropdown-header" style="font-size: 12px;">
+                        Sú último acceso fue {{ request.user.last_login }}
                     </span>
                     <div class="dropdown-divider"></div>
                     <a href="#" class="dropdown-item">
