--- a/templates/list.html
+++ b/templates/list.html
@@ -38,14 +38,12 @@
             </table>
         </div>
         <div class="card-footer">
-            {% block buttons_list %}
                 <a href="{{ create_url }}" class="btn btn-primary btn-flat btnTest">
                     <i class="fas fa-plus"></i> Nuevo registro
                 </a>
                 <a href="{{ list_url }}" class="btn btn-success btn-flat">
                     <i class="fas fa-sync"></i> Actualizar
                 </a>
-            {% endblock %}
         </div>
     </div>
 {% endblock %}
@@ -62,20 +60,20 @@
 
             });
 
-            {#$('.btnTest').on('click', function () {#}
-            {#    $.ajax({#}
-            {#        url: '{% url 'erp:category_list' %}',#}
-            {#        type: 'POST',#}
-            {#        data: {id: 1},#}
-            {#        dataType: 'json'#}
-            {#    }).done(function (data) {#}
-            {#        console.log(data);#}
-            {#    }).fail(function (jqXHR, textStatus, errorThrown) {#}
-            {#        alert(textStatus + ': ' + errorThrown);#}
-            {#    }).always(function (data) {#}
-            {##}
-            {#    });#}
-            {# });#}
+            $('.btnTest').on('click', function () {
+                $.ajax({
+                    url: '{% url 'erp:category_list' %}',
+                    type: 'POST',
+                    data: {id: 1},
+                    dataType: 'json'
+                }).done(function (data) {
+                    console.log(data);
+                }).fail(function (jqXHR, textStatus, errorThrown) {
+                    alert(textStatus + ': ' + errorThrown);
+                }).always(function (data) {
+
+                });
+             });
         });
     </script>
 {% endblock %}
