--- a/core/erp/templates/product/list.html
+++ b/core/erp/templates/product/list.html
@@ -1,9 +1,8 @@
 {% extends 'list.html' %}
 {% load static %}
-
-{#{% block head_list %}#}
-{#    <script src="{% static 'category/js/list.js' %}"></script>#}
-{#{% endblock %}#}
+{% block head_list %}
+    <script src="{% static 'product/js/list.js' %}"></script>
+{% endblock %}
 
 {% block columns %}
     <tr>
@@ -16,30 +15,6 @@
     </tr>
 {% endblock %}
 
-{% block rows %}
-    {% for obj in object_list %}
-        <tr>
-            <td>{{ obj.id }}</td>
-            <td>{{ obj.name }}</td>
-            <td>{{ obj.cat.name }}</td>q
-            <td class="text-center">
-                {#{{ obj.image }} #}
-                <img src="{{ obj.get_image }}" class="img-fluid d-block mx-auto"
-                     style="width: 20px; height: 20px;">
-            </td>
-            <td>{{ obj.pvp }}</td>
-            <td class="text-center">
-                <a href="{% url 'erp:product_update' obj.id %}" class="btn btn-warning btn-xs btn-flat">
-                    <i class="fas fa-edit"></i>
-                </a>
-                <a href="{% url 'erp:product_delete' obj.id %}" class="btn btn-danger btn-xs btn-flat">
-                    <i class="fas fa-trash"></i>
-                </a>
-            </td>
-        </tr>
-    {% endfor %}
-{% endblock %}
+{% block javascript %}
 
-{#{% block javascript %}#}
-{##}
-{#{% endblock %}#}
+{% endblock %}
