--- a/core/erp/templates/sale/create.html
+++ b/core/erp/templates/sale/create.html
@@ -48,12 +48,16 @@
                                     <input type="text" class="form-control" name="search"
                                            placeholder="Ingrese una descripción de producto" autocomplete="off">
                                     <span class="input-group-append">
-                                        <button type="button" class="btn btn-danger btn-flat"><i
+                                        <button type="button" class="btn btn-danger btn-flat btnClear"><i
                                                 class="fas fa-times"></i></button>
                                     </span>
                                 </div>
                             </div>
-
+                            <hr>
+                            <button type="button" class="btn btn-danger btn-xs btnRemoveAll btn-flat">
+                                 <i class="fas fa-trash"></i> Eliminar todos mis items
+                            </button>
+                            <hr>
                             <table class="table table-bordered" id="tblProducts">
                                 <thead>
                                 <tr>
