--- a/core/erp/templates/sale/create.html
+++ b/core/erp/templates/sale/create.html
@@ -15,121 +15,125 @@
     <script src="{% static 'lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.js' %}"></script>
     <link href="{% static 'lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.css' %}" rel="stylesheet"/>
 
-    <link href="{% static 'lib/bootstrap-touchspin-4.3.0/jquery.bootstrap-touchspin.css' %}" rel="stylesheet" />
+    <link href="{% static 'lib/bootstrap-touchspin-4.3.0/jquery.bootstrap-touchspin.css' %}" rel="stylesheet"/>
     <script src="{% static 'lib/bootstrap-touchspin-4.3.0/jquery.bootstrap-touchspin.js' %}"></script>
 
     <script src="{% static 'sale/js/form.js' %}"></script>
 {% endblock %}
 
 {% block content %}
-    <div class="card card-primary">
-        <div class="card-header">
-            <h3 class="card-title">
-                {% if action == 'add' %}
-                    <i class="fas fa-plus"></i>
-                {% else %}
-                    <i class="fas fa-edit"></i>
-                {% endif %}
-                {{ title }} / {{ date_now }}
-            </h3>
-        </div>
-        <div class="card-body">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="card card-secondary">
-                        <div class="card-header">
-                            <h3 class="card-title"><i class="fas fa-boxes"></i> Detalle de Producto</h3>
-                        </div>
-                        <!-- /.card-header -->
-                        <div class="card-body">
-                            <div class="form-group">
-                                <label>Buscador de productos:</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" name="search"
-                                           placeholder="Ingrese una descripción de producto" autocomplete="off">
-                                    <span class="input-group-append">
+    <form action="" method="post">
+        <div class="card card-primary">
+            <div class="card-header">
+                <h3 class="card-title">
+                    {% if action == 'add' %}
+                        <i class="fas fa-plus"></i>
+                    {% else %}
+                        <i class="fas fa-edit"></i>
+                    {% endif %}
+                    {{ title }} / {{ date_now }}
+                </h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="card card-secondary">
+                            <div class="card-header">
+                                <h3 class="card-title"><i class="fas fa-boxes"></i> Detalle de Producto</h3>
+                            </div>
+                            <!-- /.card-header -->
+                            <div class="card-body">
+                                <div class="form-group">
+                                    <label>Buscador de productos:</label>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" name="search"
+                                               placeholder="Ingrese una descripción de producto" autocomplete="off">
+                                        <span class="input-group-append">
                                         <button type="button" class="btn btn-danger btn-flat btnClear"><i
                                                 class="fas fa-times"></i></button>
                                     </span>
-                                </div>
-                            </div>
-                            <hr>
-                            <button type="button" class="btn btn-danger btn-xs btnRemoveAll btn-flat">
-                                 <i class="fas fa-trash"></i> Eliminar todos mis items
-                            </button>
-                            <hr>
-                            <table class="table table-bordered" id="tblProducts">
-                                <thead>
-                                <tr>
-                                    <th>Eliminar</th>
-                                    <th>Producto</th>
-                                    <th>Categoría</th>
-                                    <th>PVP</th>
-                                    <th>Cantidad</th>
-                                    <th>Subtotal</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
-                        <!-- /.card-body -->
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card card-secondary">
-                        <div class="card-header">
-                            <h3 class="card-title"><i class="fas fa-shopping-cart"></i> Datos de la Factura</h3>
-                        </div>
-                        <!-- /.card-header -->
-                        <div class="card-body">
-                            <div class="form-group">
-                                <label>Fecha de venta:</label>
-                                <div class="input-group date" id="date_joined" data-target-input="nearest">
-                                    {{ form.date_joined }}
-                                    <div class="input-group-append" data-target="#date_joined" data-toggle="datetimepicker">
-                                        <div class="input-group-text">
-                                            <i class="fas fa-calendar"></i>
-                                        </div>
                                     </div>
                                 </div>
-
+                                <hr>
+                                <button type="button" class="btn btn-danger btn-xs btnRemoveAll btn-flat">
+                                    <i class="fas fa-trash"></i> Eliminar todos mis items
+                                </button>
+                                <hr>
+                                <table class="table table-bordered" id="tblProducts">
+                                    <thead>
+                                    <tr>
+                                        <th>Eliminar</th>
+                                        <th>Producto</th>
+                                        <th>Categoría</th>
+                                        <th>PVP</th>
+                                        <th>Cantidad</th>
+                                        <th>Subtotal</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
                             </div>
-                            <div class="form-group">
-                                <label>Cliente:</label>
-                                {{ form.cli }}
-                            </div>
-                            <div class="form-group">
-                                <label>Subtotal:</label>
-                                {{ form.subtotal }}
-                            </div>
-                            <div class="form-group">
-                                <label>Iva:</label>
-                                {{ form.iva }}
-                            </div>
-                            <div class="form-group">
-                                <label>Iva Calculado:</label>
-                                <input type="text" class="form-control" readonly name="ivacalc" value="0.00">
-                            </div>
-                            <div class="form-group">
-                                <label>Total a pagar:</label>
-                                {{ form.total }}
-                            </div>
+                            <!-- /.card-body -->
                         </div>
-                        <!-- /.card-body -->
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card card-secondary">
+                            <div class="card-header">
+                                <h3 class="card-title"><i class="fas fa-shopping-cart"></i> Datos de la Factura</h3>
+                            </div>
+                            <!-- /.card-header -->
+                            <div class="card-body">
+                                <div class="form-group">
+                                    <input type="hidden" name="action" value="{{ action }}">
+                                    <label>Fecha de venta:</label>
+                                    <div class="input-group date" id="date_joined" data-target-input="nearest">
+                                        {{ form.date_joined }}
+                                        <div class="input-group-append" data-target="#date_joined"
+                                             data-toggle="datetimepicker">
+                                            <div class="input-group-text">
+                                                <i class="fas fa-calendar"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="form-group">
+                                    <label>Cliente:</label>
+                                    {{ form.cli }}
+                                </div>
+                                <div class="form-group">
+                                    <label>Subtotal:</label>
+                                    {{ form.subtotal }}
+                                </div>
+                                <div class="form-group">
+                                    <label>Iva:</label>
+                                    {{ form.iva }}
+                                </div>
+                                <div class="form-group">
+                                    <label>Iva Calculado:</label>
+                                    <input type="text" class="form-control" readonly name="ivacalc" value="0.00">
+                                </div>
+                                <div class="form-group">
+                                    <label>Total a pagar:</label>
+                                    {{ form.total }}
+                                </div>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
                     </div>
                 </div>
+
+
             </div>
-
-
+            <div class="card-footer">
+                <button type="submit" class="btn btn-primary btn-flat">
+                    <i class="fas fa-save"></i> Guardar Registro
+                </button>
+                <a href="{{ list_url }}" class="btn btn-danger btn-flat">
+                    <i class="fas fa-times"></i> Cancelar
+                </a>
+            </div>
         </div>
-        <div class="card-footer">
-            <a class="btn btn-primary btn-flat btnTest">
-                <i class="fas fa-save"></i> Guardar Registro
-            </a>
-            <a href="{{ list_url }}" class="btn btn-danger btn-flat">
-                <i class="fas fa-times"></i> Cancelar
-            </a>
-        </div>
-    </div>
+    </form>
 {% endblock %}
