"Sale fancy search with select2"

--- a/core/erp/templates/sale/list.html
+++ b/core/erp/templates/sale/list.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block head_list %}
+    <!-- My Styles -->
+    <link rel="stylesheet" href="{% static 'sale/css/sale_style.css' %}">
     <script src="{% static 'sale/js/list.js' %}"></script>
 {% endblock %}
 
