--- a/core/erp/templates/sale/create.html
+++ b/core/erp/templates/sale/create.html
@@ -46,12 +46,13 @@
                                 <div class="form-group">
                                     <label>Buscador de productos:</label>
                                     <div class="input-group">
-                                        <input type="text" class="form-control" name="search"
-                                               placeholder="Ingrese una descripción de producto" autocomplete="off">
-                                        <span class="input-group-append">
-                                        <button type="button" class="btn btn-danger btn-flat btnClear"><i
-                                                class="fas fa-times"></i></button>
-                                    </span>
+{#                                        <input type="text" class="form-control" name="search"#}
+{#                                               placeholder="Ingrese una descripción de producto" autocomplete="off">#}
+{#                                        <span class="input-group-append">#}
+{#                                            <button type="button" class="btn btn-danger btn-flat btnClear">#}
+{#                                                <i class="fas fa-times"></i></button>#}
+{#                                        </span>#}
+                                        <select class="form-control select2" style="width: 100%" name="search"></select>
                                     </div>
                                 </div>
                                 <hr>
@@ -136,4 +137,10 @@
             </div>
         </div>
     </form>
+
+    <script>
+        vents.items.products = {{ det|safe }};
+        vents.list();
+
+    </script>
 {% endblock %}
