--- a/core/homepage/static/css/Homepage_style.css
+++ b/core/homepage/static/css/Homepage_style.css
@@ -75,7 +75,7 @@ h6 {
   left: 0;
   bottom: 0;
   width: 300px;
-  transition: all ease-in-out 0.5s;
+  /*transition: all ease-in-out 0.5s;*/
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
@@ -535,7 +535,6 @@ section {
 }
 
 .portfolio #portfolio-flters {
-  padding: 0;
   margin: 0 auto 35px auto;
   list-style: none;
   text-align: center;
@@ -658,7 +657,7 @@ section {
 
 .portfolio-details .portfolio-info {
   padding: 30px;
-  box-shadow: 0px 0 30px rgba(5, 13, 24, 0.08);
+  box-shadow: 0 0 30px rgba(5, 13, 24, 0.08);
 }
 
 .portfolio-details .portfolio-info h3 {
@@ -802,13 +801,12 @@ section {
 
 .testimonials .testimonial-item p {
   font-style: italic;
-  margin: 0 15px 15px 15px;
   padding: 20px;
   background: #fff;
   position: relative;
-  margin-bottom: 35px;
+  margin: 0 15px 35px;
   border-radius: 6px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 .testimonials .testimonial-item p::after {
@@ -1101,6 +1099,6 @@ section {
   #footer {
     position: static;
     width: auto;
-    padding-right: 20px 15px;
+    padding-right: 20px;
   }
 }
